# hermes-social

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  docker-compose.yml  setup.sh
.github/workflows/: ci.yml
backend/: .env.example  .env.test  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  deps.py  executor.py  grants.py  identity.py  main.py  mcp_run.py  mcp_server.py  models.py  notifications.py  signing.py
backend/app/routers/: a2a.py  auth.py  contacts.py  interactions.py  messages.py
backend/tests/: conftest.py  test_domain.py
deploy/: provision-gcp.sh
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Shell.tsx
frontend/src/lib/: api.ts  auth.tsx  types.ts
frontend/src/pages/: ContactDetail.tsx  Contacts.tsx  Dashboard.tsx  Login.tsx  Messages.tsx  Register.tsx  Setup.tsx
plugins/: README.md
plugins/claude-code/hermes-social/: .mcp.json
plugins/claude-code/hermes-social/monitors/: monitors.json
plugins/hermes-agent/hermes-social/: __init__.py  commands.py  plugin.yaml
skills/hermes-reach-out/: SKILL.md
skills/social/hermes-social-coordination/: SKILL.md
